Fix: Remove the tokne from the public gets
